# docker

./: CMakeLists.txt  CPack.cmake  README.md
.github/workflows/: CI.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_lib/: solver.cpp
